--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.15",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
