--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "stripe": "^15.12.0",
     "ts-node-dev": "^2.0.0"
   }
 }
