--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.15",
+    "@types/stripe": "^8.0.417",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
